--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <input type="range" id="SetFlowSlider" class="RangeSetFlow" min="0" max="400" value="100" step="5">
         </div>
         <div class="Status" id="StatusInfo" >
-            <p>STATUS</p>
+            STATUS
         </div>
         <div class="MenuButton" >
             <button class="ResetBotton"id="ResetBottom">RESET</button>
