--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
             <div class="cnt"><p>50769, Seerosenweg 6, Köln, Deutschland</p><br><p>+49 174 286 125 4</p></div>
         </footer>
     </div>
-    <script src="index.js"></script>
+    <script src="compressed.js"></script>
 </body>
 </html>
